# CImg2mx_converter

./: .gitignore  CMakeLists.txt  Doxyfile  README.txt  converter.cpp  converter.h  converter.hxx
doc/: mainpage_doc.txt
include/: CImg.h
